--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,8 @@ layout: default
           {{ content }}
 
           <hr>
+            {% include disqus.html %}
+          <hr>
 
           <div class="clearfix">
 
