네이버 서치어드바이저 등록

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -93,4 +93,34 @@
   <meta name="msapplication-TileImage" content="{{ site.github.url }}/img/icon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <!-- End Favicon Tag -->
+  <!-- 네이버 연관채널 등록 -->
+  <script type="application/ld+json">
+{
+ "@context": "http://schema.org",
+ "@type": "Person",
+ "name": "{{ site.title }}",
+ "url": "{{ site.url }}",
+ "sameAs": [
+ ]
+}
+</script>
+<!-- 네이버 연관채널 등록 구조화된 데이터 태그 끝-->
+<!-- 아티클 구조화된 데이터-->
+{% if page.feature %}
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "NewsArticle",
+      "headline": "{{ page.title }}",
+      "image": [
+        "{{ site.github.url }}{{ page.feature }}"
+       ],
+      "datePublished": "{{ page.date }}"
+    }
+    </script>
+      {% endif %}
+    <!-- 아티클 구조화된 데이터 태그 끝 -->
+    <!-- 네이버 검색엔진 등록 -->
+    <meta name="naver-site-verification" content="061a879256f8a8730d2c48258efcbaecdcfe3789" />
+    <!-- 네이버 검색인 등록 코드 끝 -->
 </head>
