ga 추적코드 삽입

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -123,4 +123,15 @@
     <!-- 네이버 검색엔진 등록 -->
     <meta name="naver-site-verification" content="061a879256f8a8730d2c48258efcbaecdcfe3789" />
     <!-- 네이버 검색인 등록 코드 끝 -->
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178409995-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-178409995-1');
+    </script>
+
 </head>
