글보기 이벤트 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,3 +52,8 @@ layout: default
       </div>
     </div>
   </article>
+
+   <script type="text/javascript">
+    var title = '{{ page.title }}'';
+    gtag('event', title, { 'event_catrgory' : '글보기'});
+  </script>
