따옴표 제거

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,6 +54,6 @@ layout: default
   </article>
 
    <script type="text/javascript">
-    var title = '{{ page.title }}'';
+    var title = '{{ page.title }}';
     gtag('event', title, { 'event_catrgory' : '글보기'});
   </script>
