--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,5 +55,5 @@ layout: default
 
    <script type="text/javascript">
     var title = '{{ page.title }}';
-    gtag('event', title, { 'event_catrgory' : '글보기'});
+    gtag('event', title, { 'event_category' : '글보기'});
   </script>
